@@ -59,13 +59,33 @@ class StarterJavaProgramPatcher : JavaProgramPatcher() {
             }
             val state = PluginState.getInstance(configuration.project)
             if(state.getEnabled()){
+                // JDK 9+ module system compatibility
+                val javaVersion = getJavaVersion(javaParameters)
+                if (javaVersion >= 9) {
+                    javaParameters.vmParametersList.add("--add-opens=java.base/java.lang=ALL-UNNAMED")
+                    javaParameters.vmParametersList.add("--add-opens=java.base/java.lang.reflect=ALL-UNNAMED")
+                    javaParameters.vmParametersList.add("--add-opens=java.base/java.util=ALL-UNNAMED")
+                }
                 javaParameters.vmParametersList.add(
                     "-javaagent:${System.getProperty("user.home")}/.jtools/jtools-mybatis-log/agent.jar=${state.getAnsiCode()},${java.util.Base64.getEncoder().encodeToString(state.getJsonConfigPath().toByteArray(
                         StandardCharsets.UTF_8))}"
                 )
             }
-//            javaParameters.vmParametersList.add("-javaagent:D:\\projects\\java\\jtools-mybatis-log\\agent\\target\\agent-1.0-SNAPSHOT.jar=${enabled},${color}")
         }
+    }
 
+    private fun getJavaVersion(javaParameters: JavaParameters): Int {
+        return try {
+            val jdk = javaParameters.jdk
+            val versionString = jdk?.versionString ?: return 8
+            val version = versionString.replace(Regex("[^0-9.]"), "")
+            when {
+                version.startsWith("1.8") -> 8
+                version.startsWith("1.") -> version.substringAfter("1.").substringBefore(".").toIntOrNull() ?: 8
+                else -> version.substringBefore(".").toIntOrNull() ?: 8
+            }
+        } catch (e: Exception) {
+            8
+        }
     }
 }
